src/styles.scss
/* ... */
.moduleList .mat-tab-label-active .PROFESSIONAL {background:url('assets/icons/professional-tax-h.svg') !important;}


.MARRIAGE {background:url('assets/icons/marriage-registration.svg') !important;}
.moduleList .mat-tab-label-active .MARRIAGE {background:url('assets/icons/marriage-registration-h.svg') !important;}

.VEHICLE   {background:url('assets/icons/vehicle-tax.png') !important;}
.moduleList .mat-tab-label-active .VEHICLE  {background:url('assets/icons/vehicle-tax-h.png') !important;}

.PROPERTY-TAX  {background:url('assets/icons/property-tax.svg') !important;}
.moduleList .mat-tab-label-active .PROPERTY-TAX {background:url('assets/icons/property-tax-h.svg') !important;}

.MUTTON-FISH  {background:url('assets/icons/meat-and-fish-license.svg') !important;}
.moduleList .mat-tab-label-active .MUTTON-FISH {background:url('assets/icons/meat-and-fish-license-h.svg') !important;}

.BIRTH-DEATH  {background:url('assets/icons/birth-and-death.png') !important;}
.moduleList .mat-tab-label-active .BIRTH-DEATH {background:url('assets/icons/birth-and-death-h.png') !important;}

.affordableHousing  {background:url('assets/icons/affordable-housing.svg') !important;}
.moduleList .mat-tab-label-active .affordableHousing {background:url('assets/icons/affordable-housing-h.svg') !important;}
// End Icons ----------------------------------

.capitalCase {
    text-transform: uppercase;
}

.mat-form-field-appearance-legacy.mat-form-field-can-float.mat-form-field-should-float .mat-form-field-label,
.ng-select .ng-has-value .ng-placeholder, .ng-select.ng-select-opened .ng-placeholder,
.mat-form-field-appearance-legacy .mat-form-field-label,
.ng-select.ng-select-disabled .ng-select-container .ng-value-container .ng-placeholder,
.mat-radio-button.mat-radio-disabled .mat-radio-label-content{
    color: #292828 !important;
}

.ng-select .ng-has-value .ng-placeholder, .ng-select.ng-select-opened .ng-placeholder,
.ng-select .ng-select-container .ng-value-container .ng-placeholder{
     color: #292828 !important;
}

.mat-form-field-invalid .mat-icon, 
.mat-form-field-invalid .mat-datepicker-toggle-default-icon,
.mat-form-field.mat-form-field-invalid .mat-form-field-label,
.ng-select.ng-invalid.ng-touched .ng-placeholder, .ng-select.ng-invalid.ng-touched .ng-arrow-wrapper .ng-arrow {
    color: #f44336 !important;
}
@media print {
    .zooServicesList{ display: none;}
   }

 .createMarriageReg .mat-tab-label{
    width: 200px;
}   

@-moz-document url-prefix() {
    .stepperNav .mat-tab-label{
        font-size: 14px;
    }
}
.ngSelectPlaceholder .ng-placeholder{top:15px;}

